--- a/earthangel-frontend/public/index.html
+++ b/earthangel-frontend/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    {% comment %}
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Benne&display=swap"
       rel="stylesheet"
-    />
-    {% endcomment %}
+    /> -->
+   
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
